syntax = "proto3";


message PutRequest {
    string key  = 1;
    bytes value = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    ResponseStatus status = 1;
    bytes value = 2;
}

message ResponseStatus {
    int32 code = 1;
    string responseMessage = 2;
}

service Database {
    rpc Put(PutRequest) returns (ResponseStatus);
    rpc Get(GetRequest) returns (GetResponse);
}
